2007-08-27  Henry Proudhon  <henry.proudhon@insa-lyon.fr>

	* source/swt/org/jfree/experimental/chart/swt/ChartComposite.java
	(ChartComposite): refactored class, now implements PaintListener, 
	MouseListener and MouseMovedListener;
	(chart) Made the chart field be private again;
	(addSWTListener): new method; 
	* source/swt/org/jfree/experimental/swt/SWTUtils.java
	(toAwtMouseEvent): changed method signature.

2007-08-03  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/xy/XYSplineAndShapeRenderer.java
	(precision): Initialise in constructor,
	(XYSplineAndShapeRenderer()): Change default precision to 5,
	(XYSplineAndShapeRenderer(int)): New constructor.

2007-08-03  David Gilbert  <david.gilbert@object-refinery.com>

	Fix for bug 1766646:
	* source/org/jfree/chart/renderer/xy/XYBlockRenderer.java
	(findDomainBounds): Check for null,
	(findRangeBounds): Likewise.
	
2007-08-03  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/LegendItem.java
	(LegendItem): Initialise GradientPaintTransformer.
	
2007-08-02  David Gilbert  <david.gilbert@object-refinery.com>

	* experimental/org/jfree/experimental/chart/axis/LogAxis.java
	(LogAxis(String)): Leave tick marks visible,
	(autoAdjustRange): Apply margins to log scale, and don't allow auto-range 
	to go below minimum value,
	(refreshTicksHorizontal): Improved handling of ticks and labels,
	(refreshTicksVertical): Likewise,
	(selectAutoTickUnit): New method,
	(selectHorizontalAutoTickUnit): Likewise,
	(selectVerticalAutoTickUnit): Likewise,
	(exponentLengthToJava2D): Likewise,
	(estimateMaximumTickLabelHeight): Likewise,
	(estimateMaximumTickLabelWidth): Likewise,
	(equals): New method override,
	(hashCode): Likewise,
	(createLogTickUnits): New method,
	and moved to source/org/jfree/chart/axis/,
	* source/org/jfree/chart/axis/NumberTick.java
	(NumberTick(TickType, double, String, TextAnchor, TextAnchor, double)): 
	New constructor,